force-app/main/default/objects/Materia__c/Materia__c.object-meta.xml
<CustomObject>
    <label>Materia</label>
    <nameField>
        <label>Nombre de Materia</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Materias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>