force-app/main/default/objects/Materia__c/fields/anoEscolar__c.field-meta.xml
<CustomField>
    <fullName>anoEscolar__c</fullName>
    <description>El Año escolar representa el año dentro del programa. Se asume que un programa tiene como maximo 9 años</description>
    <inlineHelpText>Año dentro del programa, por ejemplo 1 seria primer año.</inlineHelpText>
    <label>Año escolar</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>