force-app/main/default/objects/Materia__c/fields/cargaSemanal__c.field-meta.xml
<CustomField>
    <fullName>cargaSemanal__c</fullName>
    <description>Cantidad de horas por semana</description>
    <label>cargaSemanal</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>