force-app/main/default/objects/Materia__c/fields/imagen__c.field-meta.xml
<CustomField>
    <fullName>imagen__c</fullName>
    <label>imagen</label>
    <type>Url</type>
</CustomField>