force-app/main/default/objects/Materia__c/fields/Objetivos__c.field-meta.xml
<CustomField>
    <fullName>Objetivos__c</fullName>
    <description>Es la descripcion de todas las condiciones que el alumno debe cumplir para aprobar la materia</description>
    <label>Objetivos</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>