force-app/main/default/objects/Materia__c/fields/Programa__c.field-meta.xml
<CustomField>
    <fullName>Programa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programa</label>
    <referenceTo>Programa__c</referenceTo>
    <relationshipLabel>Materias</relationshipLabel>
    <relationshipName>Materias</relationshipName>
    <type>Lookup</type>
</CustomField>