force-app/main/default/objects/Materia__c/fields/Valoracion1__c.field-meta.xml
<CustomField>
    <fullName>Valoracion1__c</fullName>
    <label>Valoracion1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>